src/pages/home/Latest.scss
@import "../../styles/variables";
@import "../../styles/mixins";

.homeLatest {
  @include darkTheme;

  .homeLatestWrapper {
    display: grid;
    padding: 50px 0;
    gap: 35px;

    @media (min-width: $media-lg) {
      padding: 87px 0 84px;
      gap: 48px;
    }

    .homeLatestTitle {
      font-weight: 700;
      font-size: 11px;
      line-height: 13px;
      letter-spacing: 0.1em;
      text-transform: uppercase;
      color: rgba(243, 242, 232, 0.5);

      @media (min-width: $media-lg) {
        font-size: 12px;
        line-height: 15px;
      }
    }

    .homeLatestGrid {
      @media (min-width: $media-lg) {
        display: grid;
        grid-template-columns: 55% 45%;
        border: 1px solid #595553;
        height: 421px;
      }

      @media (min-width: $media-lg) {
        font-size: 12px;
        line-height: 15px;
        height: 534px;
      }
    }

    .homeLatestGridItem {
      position: relative;
      padding: 40px 0 39px;
      transition: background-color 0.6s ease-in-out;

      & p {
        max-width: 430px;
      }

      &:first-child {
        grid-row: 1 / 3;
      }

      .homeLatestGridItemTitle,
      .homeLatestGridItemSubtitle {
        transition: color 0.6s ease-in-out;
      }

      &:before,
      &:after {
        content: '';
        width: 110vw;
        position: absolute;
        left: 50%;
        height: 1px;
        transform: translateX(-50%);
        background-color: #595553;
      }

      &:before {
        top: 0;
        visibility: hidden;
      }

      &:after {
        bottom: 0;
      }

      &:last-child:after {
        visibility: hidden;
      }

      @media (max-width: 991px) {
        &::before {
          content: '';
          position: absolute;
          left: 50%;
          top: 50%;
          transform: translateX(-50%) translateY(-50%);
          width: 100vw;
          height: 100%;
          opacity: 0;
          transition: opacity 0.6s ease-in-out;
          background: $lighter-color;
          z-index: 0;
          visibility: visible;
        }

        &.active {
          &::before {
            opacity: 1;
            visibility: visible;
          }

          .homeLatestGridItemTitle,
          .homeLatestGridItemSubtitle {
            position: relative;
            z-index: 1;
            color: $dark-color;
          }
        }
      }

      @media (min-width: $media-lg) {
        &:hover {
          background: $lighter-color;

          .homeLatestGridItemTitle,
          .homeLatestGridItemSubtitle {
            color: $dark-color;
          }
        }

        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        &:not(:first-child) {
          padding: 0 20px;

          .homeLatestGridItemTitle {
            font-size: 15px;
            line-height: 18px;
            letter-spacing: 0.1em;
          }

          .homeLatestGridItemSubtitle {
            font-weight: 500;
            font-size: 10px;
            line-height: 17px;
            letter-spacing: 0.05em;
          }
        }

        &:before,
        &:after,
        &:last-child:after {
          visibility: hidden;
        }

        &:first-child {
          padding: 0 34px;

          .homeLatestGridItemTitle {
            font-size: 18px;
            line-height: 30px;
            letter-spacing: 0.05em;
          }

          .homeLatestGridItemSubtitle {
            font-weight: 500;
            font-size: 13px;
            line-height: 24px;
            letter-spacing: 0.05em;
          }

          &:before {
            top: 0;
            bottom: 0;
            right: 0;
            left: unset;
            transform: unset;
            width: 1px;
            height: 100%;
            visibility: visible;
          }
        }

        &:last-child {
          &:before {
            top: 0;
            width: 100%;
            left: 0;
            right: 0;
            transform: unset;
            visibility: visible;
          }
        }
      }

      @media (min-width: $media-lg) {
        &:not(:first-child) {
          padding: 0 101px 0 97px;

          .homeLatestGridItemTitle {
            font-size: 18px;
            line-height: 22px;
          }

          .homeLatestGridItemSubtitle {
            font-weight: 500;
            font-size: 12px;
            line-height: 26px;
          }
        }

        &:first-child {
          padding: 0 124px 0 99px;

          .homeLatestGridItemTitle {
            font-size: 28px;
            line-height: 46px;
          }

          .homeLatestGridItemSubtitle {
            font-size: 16px;
            line-height: 32px;
          }
        }
      }

      .homeLatestGridItemTitle {
        font-weight: 700;
        font-size: 16px;
        line-height: 20px;
        letter-spacing: 0.05em;
        color: $lighter-color;
        margin-bottom: 15px;
        align-self: flex-start;
        transition: background-color 0.6s ease-in-out;
      }

      .homeLatestGridItemSubtitle {
        font-weight: 500;
        font-size: 12px;
        line-height: 20px;
        letter-spacing: 0.05em;
        color: $light-color;
        transition: background-color 0.6s ease-in-out;
      }
    }
  }
}

